Fix 2 list files tests with "/"